--- a/haskell-multiaddr.cabal
+++ b/haskell-multiaddr.cabal
@@ -1,8 +1,8 @@
-name:                hs-multiaddr
+name:                haskell-multiaddr
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/MatrixAI/hs-multiaddr#readme
+homepage:            https://github.com/MatrixAI/haskell-multiaddr#readme
 license:             BSD3
 license-file:        LICENSE
 author:              CMCDragonkai
@@ -20,25 +20,25 @@ library
                      , iproute
   default-language:    Haskell2010
 
-executable matrix-multiaddr-exe
+executable haskell-multiaddr-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , text
                      , filepath
-                     , matrix-multiaddr
+                     , haskell-multiaddr
   default-language:    Haskell2010
 
-test-suite matrix-multiaddr-test
+test-suite haskell-multiaddr-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , matrix-multiaddr
+                     , haskell-multiaddr
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/MatrixAI/hs-multiaddr
+  location: https://github.com/MatrixAI/haskell-multiaddr
