--- a/haskell-multiaddr.cabal
+++ b/haskell-multiaddr.cabal
@@ -15,9 +15,16 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib, Libby, Multiaddr
-  build-depends:       base >= 4.7 && < 5
+  exposed-modules:     Multiaddr
+  build-depends:       base >= 4.7 && < 4.9
                      , iproute
+                     , text
+                     , filepath
+                     , multihash
+                     , optparse-applicative >= 0.11 && < 0.12
+                     , io-streams >= 1.2  && < 1.3
+                     , bytestring
+                     , base32-bytestring
   default-language:    Haskell2010
 
 executable haskell-multiaddr-exe
@@ -25,8 +32,6 @@ executable haskell-multiaddr-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , text
-                     , filepath
                      , haskell-multiaddr
   default-language:    Haskell2010
 
@@ -36,6 +41,7 @@ test-suite haskell-multiaddr-test
   main-is:             Spec.hs
   build-depends:       base
                      , haskell-multiaddr
+                     , hspec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
