--- a/stack.yaml
+++ b/stack.yaml
@@ -4,6 +4,14 @@
 # For advanced use and comprehensive documentation of the format, please see:
 # http://docs.haskellstack.org/en/stable/yaml_configuration/
 
+# A warning or info to be displayed to the user on config load.
+user-message: ! 'Warning (added by new or init): Specified resolver could not satisfy
+  all dependencies. Some external packages have been added as dependencies.
+
+  You can suppress this message by removing it from stack.yaml
+
+'
+
 # Resolver to choose a 'specific' stackage snapshot or a compiler version.
 # A snapshot resolver dictates the compiler version and the set of packages
 # to be used for project dependencies. For example:
@@ -15,7 +23,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-8.3
+resolver: lts-3.22
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,7 +47,13 @@ packages:
 - '.'
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- base32-bytestring-0.2.1.0
+- base58-bytestring-0.1.0
+- bits-extras-0.1.3
+- blaze-builder-0.3.3.4
+- io-streams-1.2.1.3
+- multihash-0.1.2
 
 # Override default flag values for local packages and extra-deps
 flags: {}
