--- a/haskell-multiaddr.cabal
+++ b/haskell-multiaddr.cabal
@@ -27,12 +27,13 @@ library
                      , base32-bytestring
   default-language:    Haskell2010
 
-executable haskell-multiaddr-exe
+executable haskell-multiaddr
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , haskell-multiaddr
+                     , multihash
   default-language:    Haskell2010
 
 test-suite haskell-multiaddr-test
@@ -42,6 +43,11 @@ test-suite haskell-multiaddr-test
   build-depends:       base
                      , haskell-multiaddr
                      , hspec
+                     , iproute
+                     , bytestring
+                     , base32-bytestring
+                     , multihash
+                     , either-unwrap
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
