--- a/stack.yaml
+++ b/stack.yaml
@@ -54,6 +54,7 @@ extra-deps:
 - blaze-builder-0.3.3.4
 - io-streams-1.2.1.3
 - multihash-0.1.2
+- either-unwrap-1.1
 
 # Override default flag values for local packages and extra-deps
 flags: {}
