--- a/haskell-multiaddr.cabal
+++ b/haskell-multiaddr.cabal
@@ -24,7 +24,7 @@ library
                      , optparse-applicative >= 0.11 && < 0.12
                      , io-streams >= 1.2  && < 1.3
                      , bytestring
-                     , base32-bytestring
+                     , base32string
   default-language:    Haskell2010
 
 test-suite haskell-multiaddr-test
@@ -36,7 +36,7 @@ test-suite haskell-multiaddr-test
                      , hspec
                      , iproute
                      , bytestring
-                     , base32-bytestring
+                     , base32string
                      , multihash
                      , either-unwrap
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
