--- a/haskell-multiaddr.cabal
+++ b/haskell-multiaddr.cabal
@@ -19,12 +19,13 @@ library
   build-depends:       base >= 4.7 && < 4.9
                      , iproute
                      , text
+                     , bytes
                      , filepath
                      , multihash
                      , optparse-applicative >= 0.11 && < 0.12
                      , io-streams >= 1.2  && < 1.3
                      , bytestring
-                     , base32string
+                     , sandi
   default-language:    Haskell2010
 
 test-suite haskell-multiaddr-test
@@ -36,7 +37,6 @@ test-suite haskell-multiaddr-test
                      , hspec
                      , iproute
                      , bytestring
-                     , base32string
                      , multihash
                      , either-unwrap
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
