--- a/haskell-multiaddr.cabal
+++ b/haskell-multiaddr.cabal
@@ -27,6 +27,7 @@ library
                      , cereal
                      , iproute
                      , filepath
+                     , data-default
                      , multihash
                      , optparse-applicative >= 0.11 && < 0.12
                      , io-streams >= 1.2  && < 1.3
