--- a/hs-multiaddr.cabal
+++ b/hs-multiaddr.cabal
@@ -26,7 +26,7 @@ library
                        Data.Multiaddr.Onion,
                        Data.Multiaddr.Port,
                        Data.Multiaddr.UnixPath
-  build-depends:       base >= 4.7 && < 4.9
+  build-depends:       base >= 4.7 && < 4.10
                      , bytestring
                      , bytes
                      , sandi
@@ -36,7 +36,7 @@ library
                      , multihash
   default-language:    Haskell2010
 
-test-suite haskell-multiaddr-test
+test-suite hs-multiaddr-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
