--- a/stack.yaml
+++ b/stack.yaml
@@ -1,14 +1,14 @@
 flags: {}
 nix:
-  enable: true
+  enable: false
   shell-file: shell.nix
 extra-package-dbs: []
 packages:
-- '.'
+- location: .
+- location:
+    git: git@github.com:MatrixAI/haskell-multihash.git
+    commit: 55f82094ec1cd787bbf969fc7b07f9419c891efa
+  extra-dep: true
 extra-deps:
 - base58-bytestring-0.1.0
-- blaze-builder-0.3.3.4
-- either-unwrap-1.1
-- io-streams-1.2.1.3
-- multihash-0.1.2
-resolver: lts-3.22
+resolver: lts-8.15
