--- a/hs-multiaddr.cabal
+++ b/hs-multiaddr.cabal
@@ -1,56 +1,72 @@
-name:                hs-multiaddr
-version:             0.1.3
-synopsis:            Multiaddr Library for LibP2P
-description:         Multiaddr is self-describing way to represent addresses that support any standard network protocol.
-                     Multiaddr has a binary packed format, and nice string representation.
-                     It is possible to encapsulate addresses within each other.
-homepage:            https://github.com/MatrixAI/haskell-multiaddr#readme
-license:             BSD3
-license-file:        LICENSE
-author:              CMCDragonkai
-maintainer:          roger.qiu@matrix.ai
-copyright:           Copyright: (c) 2017 Roger Qiu
-category:            Data
-build-type:          Simple
-extra-source-files:  README.md
-cabal-version:       >=1.10
+-- This file has been generated from package.yaml by hpack version 0.21.2.
+--
+-- see: https://github.com/sol/hpack
+--
+-- hash: 745db5255b37b1f6164a53aafcbff51ac3059def2d18b8293943c1be523ff7ff
 
-library
-  hs-source-dirs:      src
-  exposed-modules:     Data.Multiaddr,
-                       Data.MultiaddrPart,
-                       Data.Multiaddr.IPFS,
-                       Data.Multiaddr.VarInt
-                       Data.Multiaddr.IPv4,
-                       Data.Multiaddr.IPv6
-                       Data.Multiaddr.Onion,
-                       Data.Multiaddr.Port,
-                       Data.Multiaddr.UnixPath
-  build-depends:       base >= 4.7 && < 4.10
-                     , bytestring
-                     , bytes
-                     , sandi
-                     , cereal
-                     , iproute
-                     , filepath
-                     , multihash
-  default-language:    Haskell2010
+name:           hs-multiaddr
+version:        0.1.4
+synopsis:       Multiaddr Library for LibP2P
+description:    Multiaddr is self-describing way to represent addresses that support any standard network protocol. Multiaddr has a binary packed format, and nice string representation. It is possible to encapsulate addresses within each other.
+homepage:       https://github.com/MatrixAI/hs-multiaddr#readme
+bug-reports:    https://github.com/MatrixAI/hs-multiaddr/issues
+author:         CMCDragonkai,
+                Quoc-An Ho
+maintainer:     roger.qiu@matrix.ai
+copyright:      (c) Matrix AI 2017
+license:        Apache-2.0
+license-file:   LICENSE
+build-type:     Simple
+cabal-version:  >= 1.10
 
-test-suite hs-multiaddr-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , hs-multiaddr
-                     , hspec
-                     , iproute
-                     , sandi
-                     , bytestring
-                     , multihash
-                     , either-unwrap
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
+extra-source-files:
+    README.md
 
 source-repository head
-  type:     git
-  location: https://github.com/MatrixAI/haskell-multiaddr
+  type: git
+  location: https://github.com/MatrixAI/hs-multiaddr
+
+library
+  exposed-modules:
+      Data.Multiaddr
+      Data.MultiaddrPart
+      Data.Multiaddr.IPFS
+      Data.Multiaddr.VarInt
+      Data.Multiaddr.IPv4
+      Data.Multiaddr.IPv6
+      Data.Multiaddr.Onion
+      Data.Multiaddr.Port
+      Data.Multiaddr.UnixPath
+  other-modules:
+      Paths_hs_multiaddr
+  hs-source-dirs:
+      src
+  build-depends:
+      base >=4.7 && <5
+    , bytes >=0.15 && <0.16
+    , bytestring >=0.10 && <0.11
+    , cereal >=0.5 && <0.6
+    , filepath >=1.4 && <1.5
+    , hs-multihash
+    , iproute >=1.7 && <1.8
+    , sandi >=0.4 && <0.5
+  default-language: Haskell2010
+
+test-suite hs-multiaddr-test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  other-modules:
+      Paths_hs_multiaddr
+  hs-source-dirs:
+      test
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , bytestring >=0.10 && <0.11
+    , either-unwrap >=1.1 && <1.2
+    , hs-multiaddr
+    , hs-multihash
+    , hspec >=2.4 && <2.5
+    , iproute >=1.7 && <1.8
+    , sandi >=0.4 && <0.5
+  default-language: Haskell2010
