--- a/package.yaml
+++ b/package.yaml
@@ -6,6 +6,8 @@ license: Apache-2.0
 author: ['CMCDragonkai', 'Quoc-An Ho']
 maintainer: 'roger.qiu@matrix.ai'
 copyright: '(c) Matrix AI 2017'
+category: Data
+synopsis: Multiaddr library
 description: Multiaddr is self-describing way to represent addresses that support any standard network protocol. Multiaddr has a binary packed format, and nice string representation. It is possible to encapsulate addresses within each other.
 
 extra-source-files:
